# lex-ai

./: .env.example  .gitignore  ABOUT.md  README.md  TEST_CASES.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.ps1  setup.py  setup.sh
src/: chunker.py  config.py  db.py  embeddings.py  exceptions.py  health.py  init.py  scrape.py  server.py  types.py  url_utils.py
tests/: PROMPT.md  __init__.py  conftest.py  test_chunker.py  test_config.py  test_db.py  test_embeddings.py  test_exceptions.py  test_health.py  test_url_utils.py
