[project]
name = "lex-ai"
version = "0.2.0"
description = "Scrape documentation and search it via MCP in Cursor or Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai",
    "mcp",
    "psycopg[binary]",
    "pgvector",
    "openai",
    "tiktoken",
    "python-dotenv",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
